Fix tests after depending on java.base/sun.invoke.util